--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1281,3 +1281,7 @@ h6 {
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
+
+.form-group input,label{
+  margin-bottom:2%;  
+}
